@@ -9,6 +9,10 @@
    - markus@cvs.openbsd.org 2001/05/16 20:51:57
      [authfile.c]
      return comments for private pem files, too; report from nolan@naic.edu
+   - markus@cvs.openbsd.org 2001/05/16 21:53:53
+     [clientloop.c]
+     check for open sessions before we call select(); fixes the x11 client
+     bug reported by bowman@math.ualberta.ca
 
 20010512
  - OpenBSD CVS Sync
